cmake_minimum_required(VERSION 3.17.0)
project(ESPN_FBA_RotoCalc VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Boost 1.58.0 COMPONENTS program_options filesystem)
include_directories(${Boost_INCLUDE_DIRECTORIES})
aux_source_directory(. SRC_LIST)
add_executable(roto ${SRC_LIST})
target_link_libraries(roto -static-libgcc -static-libstdc++ -std=gnu++11 ${Boost_LIBRARIES})