cmake_minimum_required(VERSION 3.17.0)
project(ESPN_FBA_RotoCalc VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(Boost_ARCHITECHTURE -x64)
aux_source_directory(. SRC_LIST)
find_package(Boost 1.58.0 COMPONENTS program_options filesystem)
if(Boost_FOUND)
	include_directories(${Boost_INCLUDE_DIRS})
	add_executable(roto ${SRC_LIST})
	target_link_libraries(roto -static-libgcc -static-libstdc++ -std=gnu++11 ${Boost_LIBRARIES})
endif()

